--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 }
 
 header {
-  background-color: red;
-  color: yellow;
+  background-color: black;
+  color: red;
   padding: 30px 0;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -20,7 +20,7 @@ header {
 .logo {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 250px;
 }
 
 .logo img {
@@ -28,22 +28,6 @@ header {
   margin-right: 10px;
 }
 
-.menu {
-  list-style: none;
-  display: flex;
-  margin-right: 20px;
-
-}
-
-.menu li {
-  margin-right: 15px;
-}
-
-.menu li a {
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
 
 #inicio {
   background-color: #f9f9f9;
@@ -73,8 +57,6 @@ header {
   font-weight: bold;
   margin-top: 10px;
 }
-
-
 
 footer {
   background-color: red;
